# stocking

./: .gitignore  .travis.yml  Cargo.toml  README.md  example.env
src/: alarm.rs  client_data.rs  main.rs  market.rs  trader.rs  util.rs
src/commands/: basic.rs  finance.rs  mod.rs
src/naver/: api.rs  mod.rs  model.rs
src/naver/res_test/: index_sise.html  stock_sise.html
