[package]
name = "stocking"
version = "0.1.0"
authors = ["NeuroWhAI <tlsehdgus0212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.10"
unhtml = "0.8"
unhtml_derive = "0.8"
chrono = "0.4"

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[dependencies.serenity]
version = "0.9.0-rc.2"
features = ["cache", "framework", "standard_framework", "rustls_backend", "collector"]
